\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
%% some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg

\name{NEWS}
\title{News for Package 'surveillance'}
\encoding{latin1}


\section{Changes in surveillance version 1.11.1 (2016-03-14)}{

\subsection{DOCUMENTATION}{
  \itemize{
    \item New \code{vignette("twinstim")} based on a recently accepted
    manuscript for the Journal of Statistical Software.
    \item Fixed typos on various help pages.
    \item The vignettes are again compatible with \R < 3.2.0.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item \code{stsplot_spacetime()} now recognizes its \code{opts.col}
    argument.

    \item \code{disProg2sts()} ignored the \code{week} indices of the
    old \code{"disProg"} object when setting the \code{epoch}.
  }
}

}



\section{Changes in surveillance version 1.11.0 (2016-02-08)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item \code{update.epidata()} can now handle a distance matrix
    \code{D} in the form of a classed \code{"Matrix"}
    (suggested by George Wood).
    
    \item \code{glrnb()} can now handle \code{ret="cases"} for the
    generalized likelihood ratio detector based on the negative binomial
    distribution. It's based on a brute-force search and hence might be
    slow in some situations.

    \item \code{boda()} and \code{bodaDelay()} now support an
    alternative method (\code{quantileMethod="MM"}) to compute quantiles
    based on the posterior distribution. The new method samples
    parameters from the posterior distribution and then computes the
    quantile of the mixture distribution using bisectionning, which is
    faster and yields similar results compared to the original method
    (\code{quantileMethod="MC"}, still the default).
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item Revised \code{vignette("hhh4")}, updated the package
    description as well as some references in the documentation.